tests/base/parser/bad/type_t-map-cid-cid-map-with.scilla
scilla_version 0

library TestLib
(* faulty is not a valid map key *)

let f : Map Uint128 Option Map faulty
